--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "webpack-bundle-analyzer": "^4.10.1"
   },
   "overrides": {
+    "serialize-javascript": "^7.0.3",
     "inquirer": "^9.2.20",
     "external-editor": "^3.1.0",
     "tmp": "^0.2.3",
